--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
 	"name": "ng-ScrollSpy.js",
 	"version": "3.2.0",
 	"main": [
-		"ng-ScrollSpy.js"
+		"src/ng-ScrollSpy.js"
 	],
 	"keywords": [
 		"angular",
